fix json search scrollbar bugs

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -190,9 +190,9 @@
 	max-width: 600px;
 	background: var(--tertiary-bg-colour);
 	max-height: 80%;
-	display: flex;
-	flex-direction: column;
 	box-shadow: 0px 0px 10px 5px black;
+	display: grid;
+	grid-template-rows: auto minmax(0, 1fr);
 }
 .mv-modal-container {
 	position: fixed;
